spring-cashier/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cashier-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-cashier
  replicas: 2
  template: # create pods using pod definition in this template
    metadata:
      labels:
        name: spring-cashier
    spec:
      containers:
        - name: spring-cashier
          image: jywheel/spring-cashier
          ports:
            - containerPort: 9090
