spring-cashier/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cashier-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    name: spring-cashier
